--- a/less/sprite.less
+++ b/less/sprite.less
@@ -163,6 +163,8 @@
 			display: inline-block;
 			width: 974*@width;
 			padding: 0;
+			margin: 1.2% 0 0 365*@width;
+			line-height: 55*@newF;
 		}
 	}
 	&>div:nth-child(3){
