--- a/css/sprite.css
+++ b/css/sprite.css
@@ -201,6 +201,8 @@
   display: inline-block;
   width: 57.97619048%;
   padding: 0;
+  margin: 1.2% 0 0 21.72619048%;
+  line-height: 152.77777778%;
 }
 .installApp > div:nth-child(3) {
   margin: 4.6% 0 0 0;
