--- a/less/background_header_footerAll.less
+++ b/less/background_header_footerAll.less
@@ -3,7 +3,6 @@
 @width: 100/1680%;
 @bdef: solid 1px red;
 
-
 //========================================
 //	Styles for background headerfooter
 //========================================
@@ -124,7 +123,7 @@
 		position: relative;
 		width: 450*@width;
 		height: 200px;
-		margin: 55px 105*@width 0 auto;
+		margin: 55px 0 0 auto;
 		p:first-child,
 		p:nth-child(2),
 		p:nth-child(3){
@@ -192,5 +191,11 @@
 		background: url(../img/footer_mes.png) no-repeat;
 		background-position: -2px -2px;
 		border-radius: 50%;
+	}
+}
+@media(max-width:750px){
+	.header{
+		background-image: none;
+		height: 150px;
 	}
 }
