--- a/less/style.less
+++ b/less/style.less
@@ -1,7 +1,55 @@
+@media(min-width:751px){
 @font: 2.6vw;
 @newF: 100/36%;
+	.wrapper{
+		font-size: @font;
+	}
+	.p-font,
+	.p-font--h5p{
+		font-size: 16*@newF;
+	}
+	.p-font--h5{
+		font-size: 24*@newF;
+	}
+	.p-font--18px,
+	.p-font--18px-b{
+		font-size: 18*@newF;
+	}
+	.left-btn,
+	.right-btn{
+		font-size: 14*@newF;
+	}
+}
+@media(max-width:750px){
+@font: 6.7vw;
+@newF: 100/36%;
+	.wrapper{
+		font-size: @font;
+	}
+	.h3-font36,
+	.h3-font30{
+		display: inline-block;
+		width: 100%;
+		font-size: @font;
 
-@media(min-width:800px){
+	}
+	.p-font,
+	.p-font--h5p{
+		font-size: 17.5*@newF;
+	}
+	.p-font--h5{
+		font-size: 20*@newF;
+	}
+	.p-font--18px,
+	.p-font--18px-b{
+		font-size: 18*@newF;
+	}
+	.left-btn,
+	.right-btn{
+		font-size: 14*@newF;
+	}
+}
+
 //=================================
 //		Common setup
 //=================================
@@ -14,7 +62,6 @@ body,
 	padding: 0;
 	margin: 0;
 	font-family: 'Ubuntu', sans-serif;
-	font-size: @font;
 }
 //=================================
 //		Color of block
@@ -46,13 +93,11 @@ body,
 .p-font,
 .p-font--h5p{
 	color: #74757b;
-	font-size: 16*@newF;
 	line-height: 24px;
 	letter-spacing: 0.4px;
 }
 .p-font--h5{
 	color: #0da088;
-	font-size: 24*@newF;
 	line-height: 24px;
 }
 .p-font--h5p{
@@ -61,7 +106,6 @@ body,
 .p-font--18px,
 .p-font--18px-b{
 	color: #393e6b;
-	font-size: 18*@newF;
 	line-height: 24px;
 }
 .p-font--18px-b{
@@ -71,7 +115,6 @@ body,
 .left-btn,
 .right-btn{
 	color: #ffffff;
-	font-size: 14*@newF;
 	line-height: 16px;
 	text-transform: uppercase;
 	font-weight: 700;
@@ -81,5 +124,4 @@ body,
 }
 .footer{
 	font-size: 10*100/28%;
-}
 }
